k8s/admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  namespace: monorepo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
        - name: admin
          image: ritesh1706/admin:latest
          ports:
            - containerPort: 4173
---
apiVersion: v1
kind: Service
metadata:
  name: admin
  namespace: monorepo
spec:
  selector:
    app: admin
  ports:
    - port: 80
      targetPort: 4173
  type: NodePort
