k8s/marketing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marketing
  namespace: monorepo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: marketing
  template:
    metadata:
      labels:
        app: marketing
    spec:
      containers:
        - name: marketing
          image: ritesh1706/marketing:latest
          ports:
            - containerPort: 4173
---
apiVersion: v1
kind: Service
metadata:
  name: marketing
  namespace: monorepo
spec:
  selector:
    app: marketing
  ports:
    - port: 80
      targetPort: 4173
  type: NodePort
