k8s/orders-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-api
  namespace: monorepo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-api
  template:
    metadata:
      labels:
        app: orders-api
    spec:
      containers:
        - name: orders-api
          image: ritesh1706/orders-api:latest
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: orders-api
  namespace: monorepo
spec:
  selector:
    app: orders-api
  ports:
    - port: 4000
      targetPort: 4000
  type: ClusterIP
