k8s/users-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-api
  namespace: monorepo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-api
  template:
    metadata:
      labels:
        app: users-api
    spec:
      containers:
        - name: users-api
          image: ritesh1706/users-api:latest
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: users-api
  namespace: monorepo
spec:
  selector:
    app: users-api
  ports:
    - port: 4000
      targetPort: 4000
  type: ClusterIP
