k8s/workspace.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workspace
  namespace: monorepo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workspace
  template:
    metadata:
      labels:
        app: workspace
    spec:
      containers:
        - name: workspace
          image: ritesh1706/workspace:latest
          ports:
            - containerPort: 4173
---
apiVersion: v1
kind: Service
metadata:
  name: workspace
  namespace: monorepo
spec:
  selector:
    app: workspace
  ports:
    - port: 80
      targetPort: 4173
  type: NodePort
